control/chameleon_zf90.F90


  interface
     function CHAMELEON_zlaswp_Tile_Async_c(A,K1,K2,IPIV,INCX,sequence,request) &
          & bind(c, name='CHAMELEON_zlaswp_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlaswp_Tile_Async_c
       type(c_ptr), value :: A
       integer(kind=c_int), value :: K1
       integer(kind=c_int), value :: K2
       type(c_ptr), value :: IPIV
       integer(kind=c_int), value :: INCX
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zlaswp_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zlaswpc_Tile_Async_c(A,K1,K2,IPIV,INCX,sequence,request) &
          & bind(c, name='CHAMELEON_zlaswpc_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlaswpc_Tile_Async_c
       type(c_ptr), value :: A
       integer(kind=c_int), value :: K1
       integer(kind=c_int), value :: K2
       type(c_ptr), value :: IPIV
       integer(kind=c_int), value :: INCX
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zlaswpc_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zlauum_Tile_Async_c(uplo,A,sequence,request) &
          & bind(c, name='CHAMELEON_zlauum_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zlauum_Tile_Async_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zlauum_Tile_Async_c
  end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
  interface
     function CHAMELEON_zplghe_Tile_Async_c(bump,uplo,A,seed,sequence,request) &
          & bind(c, name='CHAMELEON_zplghe_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplghe_Tile_Async_c
       real(kind=c_double), value :: bump
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       integer(kind=c_long_long), value :: seed
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zplghe_Tile_Async_c
  end interface
#endif

  interface
     function CHAMELEON_zplgsy_Tile_Async_c(bump,uplo,A,seed,sequence,request) &
          & bind(c, name='CHAMELEON_zplgsy_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplgsy_Tile_Async_c
       complex(kind=c_double_complex), value :: bump
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       integer(kind=c_long_long), value :: seed
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zplgsy_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zplrnt_Tile_Async_c(A,seed,sequence,request) &
          & bind(c, name='CHAMELEON_zplrnt_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplrnt_Tile_Async_c
       type(c_ptr), value :: A
       integer(kind=c_long_long), value :: seed
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zplrnt_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zplrnk_Tile_Async_c(K,C,seedA,seedB,sequence,request) &
          & bind(c, name='CHAMELEON_zplrnk_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zplrnk_Tile_Async_c
       integer(kind=c_int), value :: K
       type(c_ptr), value :: C
       integer(kind=c_long_long), value :: seedA
       integer(kind=c_long_long), value :: seedB
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zplrnk_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zposv_Tile_Async_c(uplo,A,B,sequence,request) &
          & bind(c, name='CHAMELEON_zposv_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zposv_Tile_Async_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zposv_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zsysv_Tile_Async_c(uplo,A,B,sequence,request) &
          & bind(c, name='CHAMELEON_zsysv_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsysv_Tile_Async_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zsysv_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zpotrf_Tile_Async_c(uplo,A,sequence,request) &
          & bind(c, name='CHAMELEON_zpotrf_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zpotrf_Tile_Async_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zpotrf_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zsytrf_Tile_Async_c(uplo,A,sequence,request) &
          & bind(c, name='CHAMELEON_zsytrf_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsytrf_Tile_Async_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zsytrf_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zpotri_Tile_Async_c(uplo,A,sequence,request) &
          & bind(c, name='CHAMELEON_zpotri_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zpotri_Tile_Async_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zpotri_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zpotrs_Tile_Async_c(uplo,A,B,sequence,request) &
          & bind(c, name='CHAMELEON_zpotrs_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zpotrs_Tile_Async_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zpotrs_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zsytrs_Tile_Async_c(uplo,A,B,sequence,request) &
          & bind(c, name='CHAMELEON_zsytrs_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsytrs_Tile_Async_c
       integer(kind=c_int), value :: uplo
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zsytrs_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zsymm_Tile_Async_c(side,uplo,alpha,A,B,beta,C,sequence,request) &
          & bind(c, name='CHAMELEON_zsymm_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsymm_Tile_Async_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zsymm_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zsyr2k_Tile_Async_c(uplo,trans,alpha,A,B,beta,C,sequence,request) &
          & bind(c, name='CHAMELEON_zsyr2k_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsyr2k_Tile_Async_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zsyr2k_Tile_Async_c
  end interface

  interface
     function CHAMELEON_zsyrk_Tile_Async_c(uplo,trans,alpha,A,beta,C,sequence,request) &
          & bind(c, name='CHAMELEON_zsyrk_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_zsyrk_Tile_Async_c
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: trans
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       complex(kind=c_double_complex), value :: beta
       type(c_ptr), value :: C
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_zsyrk_Tile_Async_c
  end interface

  interface
     function CHAMELEON_ztrmm_Tile_Async_c(side,uplo,transA,diag,alpha,A,B,sequence,request) &
          & bind(c, name='CHAMELEON_ztrmm_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrmm_Tile_Async_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: diag
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_ztrmm_Tile_Async_c
  end interface

  interface
     function CHAMELEON_ztrsm_Tile_Async_c(side,uplo,transA,diag,alpha,A,B,sequence,request) &
          & bind(c, name='CHAMELEON_ztrsm_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrsm_Tile_Async_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: diag
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_ztrsm_Tile_Async_c
  end interface

  interface
     function CHAMELEON_ztrsmpl_Tile_Async_c(A,L,IPIV,B,sequence,request) &
          & bind(c, name='CHAMELEON_ztrsmpl_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrsmpl_Tile_Async_c
       type(c_ptr), value :: A
       type(c_ptr), value :: L
       type(c_ptr), value :: IPIV
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_ztrsmpl_Tile_Async_c
  end interface

  interface
     function CHAMELEON_ztrsmrv_Tile_Async_c(side,uplo,transA,diag,alpha,A,B,sequence,request) &
          & bind(c, name='CHAMELEON_ztrsmrv_Tile_Async')
       use iso_c_binding
       implicit none
       integer(kind=c_int) :: CHAMELEON_ztrsmrv_Tile_Async_c
       integer(kind=c_int), value :: side
       integer(kind=c_int), value :: uplo
       integer(kind=c_int), value :: transA
       integer(kind=c_int), value :: diag
       complex(kind=c_double_complex), value :: alpha
       type(c_ptr), value :: A
       type(c_ptr), value :: B
       type(c_ptr), value :: sequence
       type(c_ptr), value :: request
     end function CHAMELEON_ztrsmrv_Tile_Async_c
  end interface
